# jupyter-resource-usage

./: .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  azure-pipelines.yml  environment.yaml  example_jupyter_jupyterlab_server_config.py  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  check-release.yml  lint.yml  tests.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: jupyterlab_kernel_usage.json
jupyter-config/server-config/: jupyterlab_kernel_usage.json
jupyter_resource_usage/: __init__.py  api.py  config.py  metrics.py  prometheus.py  server_extension.py  utils.py
jupyter_resource_usage/etc/: nbextension.json
jupyter_resource_usage/static/: main.js
jupyter_resource_usage/tests/: test_basic.py
jupyterlab-kernel-usage/: .gitignore  MANIFEST.in  RELEASE.md  install.json  package-lock.json  pyproject.toml  setup.py
jupyterlab-kernel-usage/jupyterlab_kernel_usage/: handlers.py
jupyterlab-kernel-usage/notebooks/: cpu.ipynb  memory.ipynb
jupyterlab-kernel-usage/src/: format.ts  index.ts  panel.ts
jupyterlab_kernel_usage/: __init__.py  handlers.py
nbresuse/: __init__.py  api.py  callable.py  config.py  default_resources.py  handlers.py  hooks.py  memory.py  metrics.py  prometheus.py  utils.py
nbresuse/etc/: nbextension.json  nbresuse.json  serverextension.json
nbresuse/static/: main.js
nbresuse/tests/: test_basic.py
notebooks/: cpu.ipynb  memory.ipynb
src/: format.ts  handler.ts  index.ts  panel.ts  useInterval.ts  widget.tsx
style/: base.css
