[build-system]
requires = ["jupyter_packaging~=0.10", "jupyterlab~=3.0", "setuptools>=40.8.0", "wheel"]
build-backend = "jupyter_packaging.build_api"

[license]
file="LICENSE"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyter_resource_usage/labextension/static/style.js"]
ensured-targets = ["jupyter_resource_usage/labextension/static/style.js", "jupyter_resource_usage/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]
