[build-system]
requires = [
    "hatchling>=1.5.0",
    "jupyterlab>=4.0,<5",
    "pip",
]
build-backend = "hatchling.build"

[project]
name = "jupyter-resource-usage"
description = "Jupyter Extension to show resource usage"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Jupyter Development Team" },
]
keywords = [
    "IPython",
    "Jupyter",
    "JupyterLab",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=2.0",
    "prometheus_client",
    "psutil~=5.6",
    "pyzmq>=19",
]
dynamic = ["version"]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "autopep8",
    "black",
    "flake8",
    "mock",
    "pytest",
    "pytest-cov>=2.6.1",
]

[project.urls]
Homepage = "https://github.com/jupyter-server/jupyter-resource-usage"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter_resource_usage/static" = "share/jupyter/nbextensions/jupyter_resource_usage"
"jupyter_resource_usage/labextension" = "share/jupyter/labextensions/@jupyter-server/resource-usage"
"install.json" = "share/jupyter/labextensions/@jupyter-server/resource-usage/install.json"
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/jupyter_notebook_config.d" = "etc/jupyter/jupyter_notebook_config.d"
"jupyter-config/nbconfig/notebook.d" = "etc/jupyter/nbconfig/notebook.d"

[tool.hatch.version]
path = "jupyter_resource_usage/_version.py"

[tool.hatch.build.targets.sdist]
artifacts = ["jupyter_resource_usage/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.8.2",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyter_resource_usage/labextension/static/style.js",
    "jupyter_resource_usage/labextension/package.json",
]
skip-if-exists = [
    "jupyter_resource_usage/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build"
npm = [
    "jlpm",
]

[tool.tbump.version]
current = "1.0.2"
regex = '''
  (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
  ((?P<channel>a|b|rc|.dev)(?P<release>\d+))?
'''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "jupyter_resource_usage/_version.py"

[[tool.tbump.file]]
src = "packages/labextension/package.json"

[[tool.tbump.field]]
name = "channel"
default = ""

[[tool.tbump.field]]
name = "release"
default = ""

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=4.0",
    "jlpm",
    "jlpm clean",
    "jlpm build:prod",
]

[tool.check-wheel-contents]
ignore = ["W002", "W004"]
