[flake8]
max-line-length=200
exclude=jupyter-resource-usage/tests

[metadata]
name = jupyter-resource-usage
version = attr: jupyter_resource_usage._version.__version__
description = Jupyter Extension to show resource usage
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
author = Jupyter Development Team
url = https://github.com/jupyter-server/jupyter-resource-usage
platforms = Linux, Mac OS X, Windows
keywords = Jupyter, JupyterLab, IPython
classifiers =
	Intended Audience :: Developers
	Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
	jupyter_server~=1.0
    prometheus_client
    psutil~=5.6

[options.extras_require]
dev =
    autopep8
    black
    pytest
    flake8
    pytest-cov>=2.6.1
    mock
